--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "dexweb"
-version = "4.1.5"
+version = "4.1.6"
 dependencies = [
   "pypdf",
   "importlib_resources",
@@ -26,5 +26,5 @@ classifiers = [
 [project.urls]
 Homepage = "https://alinoorul.github.io/researchengine"
 Issues = "https://github.com/matrixdex/devpy"
-Documentation = "https://github.com/matrixdex/devpy/blob/main/README.md"
+Documentation = "https://matrixdex.github.io/dexweb"
 Repository = "https://github.com/matrixdex/devpy/tree/dexweb"
